Always show page icon; Fix wrapping

--- a/svelte-app/src/styles/notion-theme/blocks/collection-gallery.scss
+++ b/svelte-app/src/styles/notion-theme/blocks/collection-gallery.scss
@@ -54,6 +54,7 @@
       padding: 16px;
       background: hsla(var(--color-bg-default-h), var(--color-bg-default-s), var(--color-bg-default-l), 0.95);
       border: 1px solid transparent;
+      gap: 18px;
       // backdrop-filter: blur(2px);
 
       .notion-property__select {
@@ -89,17 +90,6 @@
       flex-flow: column nowrap;
       justify-content: center;
       flex-grow: 1;
-
-      span.notion-semantic-string {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        width: 100%;
-      }
-
-      .notion-property__title__icon-wrapper {
-        display: none;
-      }
     }
 
 
@@ -146,10 +136,6 @@
 
     .notion-property__title {
       font-size: 1rem;
-    }
-
-    .notion-property__title__icon-wrapper {
-      display: none;
     }
   }
 
