--- a/svelte-app/src/styles/notion-theme/blocks/collection-list.scss
+++ b/svelte-app/src/styles/notion-theme/blocks/collection-list.scss
@@ -18,10 +18,6 @@
     margin-bottom: 4px;
     padding-bottom: 4px;
 
-    .notion-property__title__icon-wrapper {
-      display: none;
-    }
-
     .notion-semantic-string>span {
       border-bottom: 2px solid var(--color-link);
     }
