--- a/svelte-app/src/styles/notion-theme/blocks/collection-table.scss
+++ b/svelte-app/src/styles/notion-theme/blocks/collection-table.scss
@@ -2,10 +2,6 @@
   background-color: var(--table-header-bg);
 }
 
-.notion-collection-table__wrapper .notion-property__title .notion-property__title__icon-wrapper {
-  display: none;
-}
-
 .notion-collection-table__cell.title>a {
 
   &,
