--- a/svelte-app/src/styles/notion-theme/variables.scss
+++ b/svelte-app/src/styles/notion-theme/variables.scss
@@ -33,7 +33,7 @@
   --collection-card-cover-size-medium: 260px;
   --collection-card-cover-height-large: 320px;
   --collection-card-cover-size-large: 320px;
-  --collection-card-icon-display: none;
+  --collection-card-icon-display: block;
   --callout-padding: calc(var(--padding-layout) + 0.4rem) calc(var(--padding-layout) + 0.4rem) calc(var(--padding-layout) + 0.4rem) calc(var(--padding-layout) + 0.1em);
   --callout-border-radii: calc(var(--border-radii-layout) - 2px);
   --callout-border: var(--border-layout);
